fixed image not showing on login page on safari

--- a/themes/renewal-funds/assets/css/login-page.css
+++ b/themes/renewal-funds/assets/css/login-page.css
@@ -40,7 +40,7 @@
         .login-image {
             background: url("../images/login.png") no-repeat ;
             background-size:cover;
-            height: 100%;
+            height: 100vh;
             width: 100%;
             position: relative;
         }
